cfn.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom 
  security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository, then deployed on Apache Web Server.

Parameters:
  
Resources: 
 myWebServer:
  Type: AWS::EC2::Instance
  Properties:
   
         
    ImageId: "String"
    
    InstanceType: "t2.micro"
   
    KeyName: "sym"
    
    
    SecurityGroupIds: 
      - !Ref MYSecGrp
    
    Tags: 
      - Key: "Name"
        Value: "sym-myWebServer"
    
    UserData: "Fn::Base64: |
            #! /bin/bash
            dnf update -y
            dnf install httpd -y
            FOLDER="https://raw.githubusercontent.com/Seyma4270/101-kittens-carousel-static-website-ec2/refs/heads/main/static-web"
            cd /var/www/html
            wget ${FOLDER}/index.html
            wget ${FOLDER}/cat0.jpg
            wget ${FOLDER}/cat1.jpg
            wget ${FOLDER}/cat2.jpg
            systemctl start httpd
            systemctl enable httpd"
    
  
  
    

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP for CFN Instances  # Required
      
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: enable http port
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: enable ssh port
      Tags: 
        - Key: Name
          Value: sym-cloudformaition-sec-group
    

Outputs:
   WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
